src/test/deca/context/valid/without_class/multiple_variabl_assignation.deca
// Description :
//    test de l'assignation de plusieurs variable
//
// Resultats :
//    ok
//
// Historique:
//    cree le 18/01/2023

{
    int a = 0;
    int b;
    int c;
    int d;
    int e;
    int f;
    int g;
    int h;

    b = c = d = e = f = g = h = a;

}